--- a/index.html
+++ b/index.html
@@ -1,1 +1,109 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#5472B3">
+    <meta name="description" content="BloxBeach - the ultimate Roblox gaming experience! Deposit, withdraw, and play a variety of thrilling games with your Robux and Limiteds. Win big with Roulette, Crash, Mines, and more. Join BloxBeach for exciting gaming and the chance to multiply your Roblox assets. Safe, secure, and packed with endless fun!">
+    <title>BloxBeach - #1 Leading Roblox Casino</title>
+    <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/RCQD6P1G/Frame-7.png">
+    <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&family=Changa:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Changa One', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #2B2D46;
+            background-image: url('https://i.postimg.cc/zfC6rjRD/Robux-2019-Logo-Black-svg-50-2.png');
+            background-repeat: repeat;
+            color: #fff;
+        }
+        .container {
+            text-align: center;
+        }
+        .logo {
+            margin-top: -20px;
+            width: 90%;
+            max-width: 600px;
+            height: auto;
+            transition: transform 0.3s ease-in-out;
+        }
+        .text {
+            color: #fff;
+            font-size: 36px;
+            opacity: 0.9;
+        }
+        .subtext {
+            color: #fff;
+            font-size: 20px;
+            margin-top: 15px;
+            font-weight: 600;
+            font-family: 'Changa', sans-serif;
+            opacity: 0.7;
+        }
+        .discord-text {
+            font-weight: 600;
+            font-family: 'Changa', sans-serif;
+            font-size: 18px;
+            margin-top: 10px;
+            opacity: 0.7;
+        }
+        .discord-link {
+            background: linear-gradient(to bottom, rgba(138, 121, 184, 0.1) 10%, rgba(138, 121, 184, 1) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-decoration: none;
+        }
+        .button {
+            font-family: 'Changa One', sans-serif;
+            background: linear-gradient(to bottom, rgba(138, 121, 184, 0.1) 10%, rgba(138, 121, 184, 1) 100%);
+            color: white;
+            border: none;
+            padding: 12px 24px; 
+            font-size: 26px;
+            border-radius: 2px;
+            margin-top: 25px;
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out, border 0.3s ease-in-out;
+            border-bottom: 5px solid #4D3D77;
+        }
+        .button:hover {
+            transform: scale(1.05);
+        }
+        .button i {
+            margin-right: 10px;
+        }
+        @media only screen and (min-width: 600px) {
+            .text {
+                font-size: 54px;
+            }
+            .subtext {
+                font-size: 28px;
+                margin-top: 25px;
+            }
+            .discord-text {
+                font-size: 20px;
+                margin-top: 15px;
+            }
+            .button {
+                padding: 18px 36px;
+                font-size: 32px;
+                margin-top: 40px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="https://i.postimg.cc/NMr5C3rP/Frame-20-9.png" alt="Logo" class="logo">
+        <div class="text">Magic Awaits: RBLXMagic</div>
+        <div class="subtext">Get ready for enchantment and excitement! RBLXMagic is coming soon with thrilling games and magical wins.<br>Stay tuned for the ultimate Roblox gambling experience!</div>
+        <div class="discord-text">Check out the <a class="discord-link" href="https://discord.gg/ec6TdGHfyf">Discord Server</a> for updates.</div>
+        <button class="button" onclick="window.location.href='https://discord.gg/ec6TdGHfyf'">DISCORD</button>
+    </div>
+</body>
+</html>
