--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#5472B3">
     <meta name="description" content="BloxBeach - the ultimate Roblox gaming experience! Deposit, withdraw, and play a variety of thrilling games with your Robux and Limiteds. Win big with Roulette, Crash, Mines, and more. Join BloxBeach for exciting gaming and the chance to multiply your Roblox assets. Safe, secure, and packed with endless fun!">
-    <title>BloxBeach - #1 Leading Roblox Casino</title>
-    <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/RCQD6P1G/Frame-7.png">
+    <title>1.00x - RBLXMAGIC - #1 Premium Roblox Gambling</title>
+    <link rel="icon" href="https://i.postimg.cc/SNG7G94Y/Frame-21-4.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&family=Changa:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         body {
