--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="container">
         <img src="https://i.postimg.cc/NMr5C3rP/Frame-20-9.png" alt="Logo" class="logo">
         <div class="text">Magic Awaits: RBLXMagic</div>
-        <div class="subtext">For Kinguin</div>
+        <div class="subtext">Get ready for enchantment and excitement! RBLXMagic is coming soon with thrilling games and magical wins.<br>Stay tuned for the ultimate Roblox gambling experience!</div>
         <div class="discord-text">Check out the <a class="discord-link" href="https://discord.gg/ec6TdGHfyf">Discord Server</a> for updates.</div>
         <button class="button" onclick="window.location.href='https://discord.gg/ec6TdGHfyf'">DISCORD</button>
     </div>
