--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://i.postimg.cc/NMr5C3rP/Frame-20-9.png" alt="Logo" class="logo">
+        <img src="https://i.postimg.cc/HxmmYwCK/Frame-20-11.png" alt="Logo" class="logo">
         <div class="text">Magic Awaits: RBLXMagic</div>
         <div class="subtext">Get ready for enchantment and excitement! RBLXMagic is coming soon with thrilling games and magical wins.<br>Stay tuned for the ultimate Roblox gambling experience!</div>
         <div class="discord-text">Check out the <a class="discord-link" href="https://discord.gg/ec6TdGHfyf">Discord Server</a> for updates.</div>
