--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="text">Magic Awaits: RBLXMagic</div>
         <div class="subtext">Get ready for enchantment and excitement! RBLXMagic is coming soon with thrilling games and magical wins.<br>Stay tuned for the ultimate Roblox gambling experience!</div>
         <div class="discord-text">Check out the <a class="discord-link" href="https://discord.gg/ec6TdGHfyf">Discord Server</a> for updates.</div>
-        <button class="button" onclick="window.location.href='https://discord.gg/ec6TdGHfyf'">DISCORD</button>
+        <button class="button" onclick="window.location.href='https://discord.gg/x3fEm8zhpS'">DISCORD</button>
     </div>
 </body>
 </html>
